--- a/app/src/main/res/layout/fragment_receive.xml
+++ b/app/src/main/res/layout/fragment_receive.xml
@@ -18,30 +18,59 @@
         android:minWidth="200dp"
         android:minHeight="50dp"
         android:progress="0"
-        app:layout_constraintBottom_toTopOf="@+id/tw_userIp"
+        app:layout_constraintBottom_toTopOf="@+id/animContainer"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/tw_userIp"
+
+    <LinearLayout
+        android:id="@+id/animContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your IP"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/receivedDataContainer"
         app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="horizontal"
+        android:gravity="center"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/progressBar">
+
+        <TextView
+            android:id="@+id/tw_userIp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:text="Your IP"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/receivedDataContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/pulseView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="8dp"
+            android:layout_marginStart="8dp"
+            android:src="@drawable/circular_pulse"
+            app:layout_constraintBottom_toTopOf="@+id/receivedDataContainer"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tw_userIp" />
+    </LinearLayout>
+
 
     <ScrollView
         android:id="@+id/receivedDataContainer"
         android:layout_width="match_parent"
         android:layout_height="240dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@id/cardView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tw_userIp">
+        app:layout_constraintTop_toBottomOf="@id/animContainer">
 
         <LinearLayout
             android:layout_width="wrap_content"
